cli/tests/testdata/check/deno_unstable_not_found/main.out
error: TS2551 [ERROR]: Property 'openKv' does not exist on type 'typeof Deno'. Did you mean 'open'? 'Deno.openKv' is an unstable API. Did you forget to run with the '--unstable' flag, or did you mean 'open'? If not, try changing the 'lib' compiler option to include 'deno.unstable' or add a triple-slash directive to the top of your entrypoint (main file): /// <reference lib="deno.unstable" />
Deno.openKv;
     ~~~~~~
    at file:///[WILDCARD]/deno_unstable_not_found/main.ts:1:6

    'open' is declared here.
      export function open(
                      ~~~~
        at asset:///lib.deno.ns.d.ts:[WILDCARD]:19

TS2339 [ERROR]: Property 'createHttpClient' does not exist on type 'typeof Deno'. 'Deno.createHttpClient' is an unstable API. Did you forget to run with the '--unstable' flag? If not, try changing the 'lib' compiler option to include 'deno.unstable' or add a triple-slash directive to the top of your entrypoint (main file): /// <reference lib="deno.unstable" />
Deno.createHttpClient;
     ~~~~~~~~~~~~~~~~
    at file:///[WILDCARD]/deno_unstable_not_found/main.ts:2:6

Found 2 errors.
